--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             Exciting tours for adventurous people
           </h2>
         </div>
-        <div class="row">
-          <div class="col-1-of-2">
+        <div class="row row-1-of-2">
+          <div>
             <h3 class="heading-tertiary u-margin-bottom-small">
               You're going to fall in love with nature
             </h3>
@@ -100,7 +100,7 @@
             </p>
             <a href="#" class="btn-text">Learn more &rarr;</a>
           </div>
-          <div class="col-1-of-2">
+          <div>
             <div class="composition">
               <img
                 srcset="
@@ -138,8 +138,8 @@
       </section>
 
       <section class="section-features">
-        <div class="row">
-          <div class="col-1-of-4">
+        <div class="row row-1-of-4">
+          <div>
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-world"></i>
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -151,7 +151,7 @@
               </p>
             </div>
           </div>
-          <div class="col-1-of-4">
+          <div>
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-compass"></i>
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -163,7 +163,7 @@
               </p>
             </div>
           </div>
-          <div class="col-1-of-4">
+          <div>
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-map"></i>
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -175,7 +175,7 @@
               </p>
             </div>
           </div>
-          <div class="col-1-of-4">
+          <div>
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-heart"></i>
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -194,8 +194,8 @@
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
-        <div class="row">
-          <div class="col-1-of-3">
+        <div class="row row-1-of-3">
+          <div>
             <div class="card">
               <div class="card__side card__side--front">
                 <div class="card__picture card__picture--1">&nbsp;</div>
@@ -225,7 +225,7 @@
               </div>
             </div>
           </div>
-          <div class="col-1-of-3">
+          <div>
             <div class="card">
               <div class="card__side card__side--front">
                 <div class="card__picture card__picture--2">&nbsp;</div>
@@ -255,7 +255,7 @@
               </div>
             </div>
           </div>
-          <div class="col-1-of-3">
+          <div>
             <div class="card">
               <div class="card__side card__side--front">
                 <div class="card__picture card__picture--3">&nbsp;</div>
@@ -438,8 +438,8 @@
           />
         </picture>
       </div>
-      <div class="row">
-        <div class="col-1-of-2">
+      <div class="row row-1-of-2">
+        <div>
           <div class="footer__navigation">
             <ul class="footer__list">
               <li class="footer__item">
@@ -460,7 +460,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-1-of-2">
+        <div>
           <p class="footer__copyright">
             Designed by
             <a href="https://codingheroes.io/" class="footer__link">
